adding one line

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       </div>
     </div>
   </footer>
-
+modification for git
   <!-- Portfolio Modals -->
 
   <div class="modal-container"></div>
