--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To my Portfolio</div>
+        <div class="intro-lead-in">Oz Mercer's Portfolio</div>
         <div class="intro-heading">Reaching for the stars</div>
         <a class="btn btn-xl js-scroll-trigger header-btn" href="#services">Tell Me More</a>
       </div>
@@ -92,28 +92,33 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading">Specialities</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading">About Me</h2>
+          <h3 class="section-subheading text-muted">Some of my skills and interests</h3>
         </div>
       </div>
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-flask fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">E-Commerce</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex
-            magni, dicta impedit.</p>
+          <h4 class="service-heading">Science</h4>
+          <p class="text-muted">
+            I have a passion for science and nature. Having completed a B.Sc. in Biotech
+            and Food Engineering and working at a company that treats wastewater, I hope to someday combine my
+            coding skills with my academic knowlage and develope new and exiting fields.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Responsive Design</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex
-            magni, dicta impedit.</p>
+          <h4 class="service-heading">Fast learning and creativity</h4>
+          <p class="text-muted">I am an autodidact with a fast learning ability. I have always been teching
+            myself new skills, such as playing the guitar, speaking german or the basics of coding. After
+            getting familiar with Computer Science I felt a strong connection and decided to make a career 
+            in this field.
+          </p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -219,7 +224,6 @@
       </div>
     </div>
   </footer>
-modification for git
   <!-- Portfolio Modals -->
 
   <div class="modal-container"></div>
