--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
   <!-- Custom scripts for this template -->
   <script src="js/ca-gallery.js"></script>
   <script src="js/offCanvas.js"></script>
+  <script src="js/descriptions.js"></script>
   <script src="js/main.js"></script>
 
 
